fix: update blockquote line-height for improved readability

--- a/apps/website/src/app/styling/globals.css
+++ b/apps/website/src/app/styling/globals.css
@@ -38,7 +38,7 @@ blockquote {
   margin: 0;
   padding: 20px 0;
   font-size: 1.3rem;
-  line-height: 32px;
+  line-height: 2rem;
   font-weight: 500;
   opacity: 0.85;
   width: 85%;
